<resources>
    <string name="app_name">Trip Mate</string>
    <string name="title_activity_home_add_button">HomeAddButton</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_app_home">Upcoming Trips</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for side drawer menu -->
    <string name="menu_home">History</string>
    <string name="menu_gallery">Memories</string>
    <string name="menu_slideshow">Logout</string>
    <string name="home_second">History</string>
    <string name="title_activity_user_cycle">UserCycleActivity</string>

    <string name="tripname">TripName</string>
    <string name="from">  From</string>
    <string name="to">"To"</string>

    <string name="title_activity_homepage">homepageActivity</string>

    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="no_account_yet_sign_up_here">No account yet? Sign up here</string>
    <string name="sign_up">Sign Up</string>
    <string name="title_activity_upcoming_trips">UpcomingTripsActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_location">Search start point</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="start_trip">Start Trip</string>
    <string name="edit_notes">Edit Notes</string>
    <string name="edit_trip">Edit Trip</string>
    <string name="cancel_trip">Cancel Trip</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="trip_name">Trip name</string>
    <string name="search_destination">Search Destination</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="add_a_note">Add a note</string>
    <string name="add_trip">Add Trip</string>
    <string name="start_point">Start Point</string>
    <string name="destination">Destination</string>
    <string name="des">"Enter Destination "</string>
    <string name="cancel">Cancel</string>

    <string-array name="times_array">
        <item>Don\'t Repeat</item>
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="trip_direction_array">
        <item>One way Trip</item>
    </string-array>

    <string name="ai_trip_plan_toolbar_title">AI Travel Plan</string>
    <string name="ai_trip_plan_loading">Generating smart itinerary...</string>
    <string name="ai_trip_plan_retry">Retry</string>
    <string name="ai_trip_plan_packing_header">AI Packing List</string>
    <string name="ai_trip_plan_day_plan_header">AI Day-by-Day Plan</string>
    <string name="ai_trip_plan_tips_header">General Tips</string>
    <string name="ai_trip_plan_error_missing_trip">Unable to open this trip.</string>
    <string name="ai_trip_plan_error_generic">Could not generate AI plan. Please try again.</string>
    <string name="ai_trip_plan_route_template">From %1$s -> %2$s</string>
    <string name="ai_trip_plan_date_template">Starting %1$s at %2$s</string>
    <string name="ai_trip_plan_notes_template">Notes: %1$s</string>
    <string name="ai_trip_plan_no_tips">No tips yet. Try generating again soon.</string>
    <string name="ai_trip_plan_value_unknown">Unknown</string>
    <string name="ai_trip_plan_item_category_template">Category: %1$s</string>
    <string name="ai_trip_plan_item_reason_template">Reason: %1$s</string>
    <string name="ai_trip_plan_day_title_template">Day %1$d - %2$s</string>
    <string name="ai_trip_plan_day_no_description">Details coming soon.</string>
    <string name="ai_trip_plan_day_no_places">No places suggested yet.</string>
    <string name="ai_trip_plan_cost_food_template">Food: %1$s</string>
    <string name="ai_trip_plan_cost_travel_template">Travel: %1$s</string>
    <string name="ai_trip_plan_cost_stay_template">Stay: %1$s</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="delete_photo_confirmation_title">Delete photo?</string>
    <string name="delete_photo_confirmation_message">This photo will be removed from the trip memories.</string>
    <string name="delete_photo_failed">Could not delete photo.</string>
    <string name="photo_deleted">Photo deleted.</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_link_sent">Reset link sent to your email.</string>
    <string name="reset_link_failed">Unable to send reset link. Please try again.</string>
    <string name="enter_email_reset">Enter your email to reset password.</string>

</resources>
